= Change Log =

Major updates are marked with a "*"

== MCX v2025 (Jumbo Jolt - 2.6), FangQ <q.fang (a) neu.edu> ==

 2025-01-22 [24b445e] [bug] fix incorrect per-voxel pathlength when mua->0, #164
 2025-01-21 [1f536ba] [bug] fix windows -N error
 2025-01-21 [aeca212] [cmake] update cmake to add -N support
 2025-01-21 [134ab82] [ci] fix windows msvc compilation error
 2025-01-21 [12071fd] [feat] add -N/--net to download simulations from NeuroJSON.io, add -Q
 2025-01-10 [cf10d5f] [pmcx] Parse issavedet field of the cfg dict as an int instead of a bool.
 2025-01-03 [8f433e9] [feat] allow plotting logical arrays in mcxplotvol
 2024-12-15 [eafea84] [feat] polish and miss_hit format of demo_mcxlab_replay_traj.m
 2024-12-15 [82e100b] [feat] add missing demo_mcxlab_replay_traj.m script
 2024-12-11 [22bf12a] [bug] fix mcxlab castlist
 2024-12-04 [86dcba9] [bug] force most scalar inputs to be double to avoid incorrect typecasting
 2024-11-25 [4b7020d] [ci] upgrade pmcx macos build to macos-13
 2024-11-25 [51e9970] [bug] fix mcx crash when replay is requested without seed file
 2024-11-22 [e8907db] [ci] include vcomp140.dll in windows binary
 2024-11-22 [2902119] [ci] further test vcomp140
 2024-11-22 [c3d413d] [ci] find vcomp140.dll
 2024-11-21 [4f1335c] [ci] print vcomp1xx.dll path
 2024-11-21 [d033755] [bug] apply patch in #235 to pmcx, bump pmcx to v0.3.6
 2024-11-21 [744c088] [bug] correctly return integer based w0 and detid in pattern3d
 2024-11-21 [dcf11c4] [bug] enable photon sharing for pattern3d source
 2024-11-18 [bd62362] [bug] fix mcxlab crash with >2^31-1 voxels, fix #235, revert #164
 2024-11-13 [188338b] [feat] negative detector radius captures but does not save photons
 2024-11-12 [dfc704f] [ci] reduce macos binary size using strip
 2024-11-12 [7d33c14] [ci] disable octave download on macos
 2024-11-12 [43e7416] [ci] download octave app with -L
 2024-11-12 [c978a3e] [ci] use octave app on macos
 2024-11-12 [30cc3cb] [ci] upload macos mcx package