@@ -1,6 +1,6 @@
 .\" Manpage for mcx.
 .\" Contact fangqq@gmail.com to correct errors or typos.
-.TH man 7 "26 January 2025" "v2025" "Monte Carlo eXtreme (MCX) man page"
+.TH man 7 "26 January 2025" "v2025.6.pre" "Monte Carlo eXtreme (MCX) man page"
 .SH NAME
 mcx \- a GPU-accelerated 3-D photon transport simulator
 .SH SYNOPSIS
@@ -45,7 +45,7 @@ if -f is followed by nothing or a single '-', it reads input from stdin via pipe
 .TP
 \fB-Q/--bench  <A string>\fR
 .TP
-Use -Q or --bench to list all built-in benchmarks. As of MCX v2025, these benchmarks include
+Use -Q or --bench to list all built-in benchmarks. As of MCX v2025.6.pre, these benchmarks include
 	cube60
 	cube60b
 	cube60planar
