@@ -1,6 +1,6 @@
 .\" Manpage for mcxcontest.
 .\" Contact fangqq@gmail.com to correct errors or typos.
-.TH man 7 "26 January 2025" "v2025" "mcxcontest man page"
+.TH man 7 "26 January 2025" "v2025.6.pre" "mcxcontest man page"
 .SH NAME
 mcxcontest \- benchmark your NVIDIA GPU hardware using MCX built-in tests
 .SH SYNOPSIS
