@@ -1,6 +1,6 @@
 .\" Manpage for mcxshow.
 .\" Contact fangqq@gmail.com to correct errors or typos.
-.TH man 7 "26 January 2025" "v2025" "mcxshow man page"
+.TH man 7 "26 January 2025" "v2025.6.pre" "mcxshow man page"
 .SH NAME
 mcxshow \- a 3D previewer for MCX/MCXCL/MMC photon transport simulations
 .SH SYNOPSIS
