@@ -1,6 +1,6 @@
 .\" Manpage for mcxstudio.
 .\" Contact fangqq@gmail.com to correct errors or typos.
-.TH man 7 "26 January 2025" "v2025" "Monte Carlo eXtreme (MCX) Studio man page"
+.TH man 7 "26 January 2025" "v2025.6.pre" "Monte Carlo eXtreme (MCX) Studio man page"
 .SH NAME
 MCXStudio \- a cross-platform GUI for managing MCX/MCXCL/MMC simulations
 .SH SYNOPSIS
