@@ -1,6 +1,6 @@
 .\" Manpage for mcxviewer.
 .\" Contact fangqq@gmail.com to correct errors or typos.
-.TH man 7 "26 January 2025" "v2025" "mcxviewer man page"
+.TH man 7 "26 January 2025" "v2025.6.pre" "mcxviewer man page"
 .SH NAME
 mcxviewer \- a 3D NIfTI/MC2 volumetric data renderer for MCX/MCXCL/MMC photon transport simulations
 .SH SYNOPSIS
