@@ -1,6 +1,6 @@
 .\" Manpage for photon.
 .\" Contact fangqq@gmail.com to correct errors or typos.
-.TH man 7 "26 January 2025" "v2025" "photon man page"
+.TH man 7 "26 January 2025" "v2025.6.pre" "photon man page"
 .SH NAME
 photon \- a unified command line interface for running MCX/MMC photon simulations
 .SH SYNOPSIS
