@@ -1,5 +1,5 @@
 Name: mcxlab
-Version: 2.6
+Version: 2.8
 Date: 2025-02-12
 Title: GPU Monte Carlo eXtreme photon transport simulator for MATLAB/Octave
 Author: Qianqian Fang <fangqq@gmail.com>
