@@ -45,7 +45,7 @@ object fmAbout: TfmAbout
     BorderStyle = bsNone
     Font.Color = clWhite
     Lines.Strings = (
-      'MCXStudio version: v2025'
+      'MCXStudio version: v2025.6.pre'
       ''
       'Funding Support:'
       '  This project is funded by the NIH/NIGMS under '
