@@ -5,7 +5,7 @@
 #
 # Author:  Qianqian Fang <q.fang at neu.edu>
 # License: GPLv3
-# Version: 0.5 (v2020)
+# Version: 0.5 (v2025.6)
 # Github:  https://github.com/fangq/mcx/
 #
 ###############################################################################
