@@ -2,13 +2,13 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
 
 PackageIdentifier: coti.mcxstudio
-PackageVersion: v2025
+PackageVersion: v2025.6
 MinimumOSVersion: 10.0.0.0
 InstallerType: inno
 Scope: machine
 Installers:
 - Architecture: x64
-  InstallerUrl: https://mcx.space/nightly/release/v2025/MCXStudio-v2025-installer.exe
+  InstallerUrl: https://mcx.space/nightly/release/v2025.6/MCXStudio-v2025.6-installer.exe
   InstallerSha256: 2e48cf40473c5601fff8f6fdc22734f83d5e4b935298a6c184468bb96b23fc2b
 ManifestType: installer
 ManifestVersion: 1.9.0
