@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.1.0.schema.json
 
 PackageIdentifier: coti.mcxstudio
-PackageVersion: v2025
+PackageVersion: v2025.6
 PackageLocale: en-US
 Publisher: COTILab
 PublisherUrl: https://mcx.space
@@ -12,9 +12,9 @@ Author: Qianqian Fang
 PackageName: MCX Studio
 PackageUrl: https://sourceforge.net/projects/mcx/
 License: GNU General Public License v3.0 (GPL-3.0)
-LicenseUrl: https://github.com/fangq/mcx/blob/v2025/LICENSE.txt
+LicenseUrl: https://github.com/fangq/mcx/blob/v2025.6/LICENSE.txt
 Copyright: Copyright (c) 2010-2025  Qianqian Fang <q.fang at neu.edu>
-CopyrightUrl: https://github.com/fangq/mcx/blob/v2025/LICENSE.txt
+CopyrightUrl: https://github.com/fangq/mcx/blob/v2025.6/LICENSE.txt
 ShortDescription: Monte Carlo eXtreme (MCX) - Physically accurate and validated GPU ray-tracer
 Description: Monte Carlo eXtreme, or MCX, is a Monte Carlo photon simulator for modeling light transport in 3D turbid media. It uses NVIDIA graphics processing units (GPUs) to simulate thousands of photons simultaneously, making it one of the fastest and most accurate photon modeling tools.
 Moniker: mcxstudio
@@ -36,6 +36,6 @@ ReleaseNotes: |-
   - [Critical Bug fix] Fix incorrect partial path lengths for long-path photons, (fangq/mcx\#222)
   - [Bug fix] Further updates to the handling of low absorption medium (fangq/mcx\#164)
   - [Bug fix] A bug fix related to multi-source simulation to properly return the source ID (fangq/mcx\#217)
-ReleaseNotesUrl: https://mcx.space/wiki/index.cgi?Doc/ReleaseNotes/v2025
+ReleaseNotesUrl: https://mcx.space/wiki/index.cgi?Doc/ReleaseNotes/v2025.6
 ManifestType: defaultLocale
 ManifestVersion: 1.9.0
