@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.1.0.schema.json
 
 PackageIdentifier: coti.mcxstudio
-PackageVersion: v2025
+PackageVersion: v2025.6
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.9.0
